
BUG FIXES:
+Properly update titlebar and other contexts when page change is initiated from
an error hotspot in Launch window.
+Fix source installer not installing pygments package
+Fix focus not getting set to text buffer when switching tabs with ctrl+tab on
Windows.
+Fix some issues with the ipc server failing to connect
+Fix some export issues in the Style Editor

#-----------------------------------------------------------------------------#

VERSION 0.3.38
DATE 08/07/2008
14th Alpha Release

NEWS:

This release adds a number of new features and is the start of a platform for
future enhancements. The main items added in this round are the enhancements to
the syntax management system to allow for extension through custom lexers and 
providing language specific auto-indentation support. The ground work of an
IPC server has also been added to allow for interprocess communication and some
remote control support for controlling Editra from other applications.


NEW: [features/improvements]
+Add IPC server for remotely controlling Editra and sending commands
+Add support for using container lexers to extend supported languages
+Add support for highlighting Mako and Django templates
+New version of CodeBrowser (Adds C and Ruby Support)
+New version of Launch (file to run can be selected without buffer change)
+Minor updates to FileBrowser
+Automatically fill search field with selected text in buffer when performing
a search action.
+Show Shelf menu command keybinding is now configurable
+Some Vi emulation improvements
+More responsive notebook tab scrolling
+Improved Python auto-indentation
+Opening files after program launch will now be opened in the running instance
instead of creating a separate running instance using the user preference
settings for opening new files in tabs or windows.
+Updated translations
+Shelf window tabs are now shown on the bottom to keep the shelf controls
closer to the editor buffer.